[package]
name = "derivit"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "A placeholder"

[workspace]
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.2"
edition = "2021"
repository = "https://github.com/al8n/derivit"
homepage = "https://github.com/al8n/derivit"
license = "Apache-2.0/MIT"

[workspace.dependencies]
heck = "0.4"
darling = "0.14"
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.1"
enumit = { path = "crates/enumit", version = "0.1.2" }
fromit = { path = "crates/fromit", version = "0.1.2" }
infoit = { path = "crates/infoit", version = "0.1.2" }
infoit-derive = { path = "crates/infoit-derive", version = "0.1.2" }
viewit = { path = "crates/viewit", version = "0.1.2" }
derivit-core = { path = "crates/derivit-core", version = "0.1.2" }

[dependencies]
enumit = { workspace = true }
fromit = { workspace = true }
infoit = { workspace = true }
viewit = { workspace = true }
