[package]
name = "derivit-core"
version = "0.1.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Common code for the derivit crates."

[dependencies]
syn = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }