[package]
name = "infoit-derive"
version = "0.0.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "a placeholder"

[lib]
proc-macro = true

[features]
default = []
nightly = []

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
heck = { workspace = true }
indexmap = {version = "1.9.2", features = ["serde-1"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
