[package]
name = "viewit"
version = "0.0.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "a placeholder"

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
heck = { workspace = true }
derivit-core = { path = "../derivit-core", version = "0.1.0" }