[package]
name = "viewit"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
description = "Attribute and derive macros for creating accessors for struct."

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
darling = { workspace = true }
heck = { workspace = true }
derivit-core = { workspace = true }
